--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,23 @@
 {
     "require": {
-        "slim/slim": "3.0"
+        "slim/slim": "3.0",
+        "slim/php-view": "^2.2",
+        "catfan/medoo": "^1.7",
+        "monolog/monolog": "^2.0",
+        "php-di/php-di": "^6.0",
+        "fzaninotto/faker": "^1.9",
+        "vlucas/phpdotenv": "^5.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Config\\": "config/",
+            "Database\\": "database/",
+            "App\\Models\\": "app/models/",
+            "App\\Controllers\\": "app/controllers/"
+        }
+    },
+    "require-dev": {
+        "robmorgan/phinx": "^0.12"
     }
 }
